--- a/econvenor/commonstatic/css/econvenor.css
+++ b/econvenor/commonstatic/css/econvenor.css
@@ -468,18 +468,13 @@ body {
 
 /* Set up meeting tables on dashboard */
 
-.meeting-table {
-  margin: -15px -15px -15px -15px;
+.dashboard-meeting-table {
   height: 160px;
 }
 
-.meeting-table td {
-  padding: 10px 40px 0px 15px;
-}
-
-.meeting-table td:first-child {
-  color: #ffffff;
+.dashboard-meeting-table td:first-child {
   background-color: #aaaaaa;
+  width: 120px;
 }
 
 /* Set up task tables on dashboard */
@@ -502,6 +497,7 @@ tbody tr:hover {
   cursor: pointer;
 }
 
+.dashboard-meeting-table tbody tr:hover,
 #meeting_list tbody tr:hover {
   cursor: default;
 }
