--- a/meetings/templates/meeting_add.html
+++ b/meetings/templates/meeting_add.html
@@ -1,37 +1,49 @@
 {% extends "app_base.html" %}
 {% load setclass %}
-{% load staticfiles %}
 
 {% block content %}
 
-<div class="page-header">
-  <h1>New meeting</h1>
-</div>
-
-<div class="well">
-  <div class="span10"> 
-    <form id="addmeetingform" action="" method="POST">
-    {% csrf_token %}
-      {{ meeting_form.as_p }}
-      <button type="submit" class="btn btn-primary">
-        Save meeting details
-      </button>
-      <a href={% url 'meeting-list-current' %}>
-        <button type="button" class="btn btn-default">
-          Cancel
-        </button>
-      </a>
-    </form>
-  </div>
-</div>
+<div class="col-sm-10 col-md-8 col-lg-6 no-toolbar">
+  <div class="panel panel-default">
+    <div class="panel-heading">
+	  <i class="fa fa-plus-circle fa-fw fa-lg"></i>&nbsp;
+	  Add new meeting
+    </div>
+    <div class="panel-body">
+      <form role="form" id="addmeetingform" action="" method="POST">
+      {% csrf_token %}
+        {% for field in form %}
+          <div class="form-group">
+            {{ field.label_tag }}
+            {{ field }}
+            {{ field.errors }}
+          </div>
+        {% endfor %}
+        <div class="pull-right">
+          <a href={% url 'meeting-list-current' %} type="button" class="btn btn-default" >
+            <i class="fa fa-minus-circle fa-lg"></i>&nbsp;
+            Cancel
+          </a>
+          <button type="submit" class="btn btn-primary">
+            <i class="fa fa-check-circle fa-lg"></i>&nbsp;
+            Save meeting
+          </button>
+        </div>
+      </form>
+    </div><!-- /.panel-body -->
+  </div><!-- /.panel -->  
+</div><!-- /.col -->
 
 {% endblock content %}
 
 {% block extrajs %}
 
-<script src="{% static 'js/jquery.timepicker-1.3.5.min.js' %}"></script>
-
 <script>
+
+  $(function() {
+    $( "#id_meeting_status" ).parent().hide();
+    $( "#id_location_scheduled" ).prev().html('Location (optional)');
+  });
 
   $(function() {
   
@@ -50,6 +62,7 @@
         meeting_no: {
           required: true,
           meetingNumberCheck: true,
+          maxlength: 20,          
         },
         meeting_type: "required",
         date_scheduled: {
@@ -60,7 +73,13 @@
           required: true,
           timeCheck: true,
         },
+        location_scheduled: {
+          maxlength: 100,          
+        },
         meeting_status: "required",
+        instructions_scheduled: {
+          maxlength: 100,          
+        },
       },
       messages: {
         meeting_no: {
@@ -72,15 +91,13 @@
           date: "Please select a valid date from the calendar",
         },
         start_time_scheduled: {
-          required: "Please select the meeting's start time",        
+          required: "Please chose a start time - you can change it later",
         },
         meeting_status: "Please select the current status of the meeting",
       },
     });
-    
   })
 
 </script>
-
 
 {% endblock extrajs %}
