--- a/meetings/templates/meeting_list_archive.html
+++ b/meetings/templates/meeting_list_archive.html
@@ -9,7 +9,7 @@
 	  <i class="fa fa-archive fa-fw fa-lg"></i>&nbsp;
 	  Archived meetings
     </div>
-    <table class="table table-hover" id="table_archived_meetings">
+    <table class="table" id="table_archived_meetings">
       <thead>
         <tr>
           {% for table_heading in table_headings %}
