--- a/meetings/templates/meeting_list_current.html
+++ b/meetings/templates/meeting_list_current.html
@@ -9,7 +9,7 @@
 	  <i class="fa fa-pencil fa-fw fa-lg"></i>&nbsp;
 	  Current meetings
     </div>
-    <table class="table table-hover" id="table_current_meetings">
+    <table class="table" id="table_current_meetings">
     <thead>
       <tr>
         {% for table_heading in table_headings %}
